@@ -35,8 +35,6 @@
  * @version 1.2
  * @date    March 25, 2012
  * Added block termination comments
- *
- * @todo Add Stanza 'pullquotes-readme.txt' file
  */
 
 class OpusPrimusPullQuotes {
