@@ -9,7 +9,7 @@
 == Copyright ==
 Copyright (c) 2012-2013, Opus Primus
 
-This file is part of the Opus Primus PullQuotes Stanza.
+This file is part of the Opus Primus PullQuotes Stanza, a part of Opus Primus.
 
 Opus Primus PullQuotes is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License version 2, as published by
@@ -35,10 +35,30 @@ Note: Opus Primus file Copyright years start with the first year of use and are
 amended with subsequent years based on file modification as the case may be.
 
 == Basic FAQ ==
+Q: Who wrote the Opus Primus PullQuotes Stanza?
+The PullQuotes Stanza was written by the Opus Primus lead developer, Cais aka
+Edward Caissie. Visit his website at http://edwardcaissie.com
+
 Q: What is a PullQuote?
+The wikipedia definition reads "A pull quote (also known as a lift-out quote)
+is a quotation or excerpt from an article that is typically placed in a larger
+or distinctive typeface on the same page, serving to entice readers into an
+article or to highlight a key topic. The term is principally used in journalism
+and publishing."
 
+Q: Where do PullQuotes appear?
+By default the PullQuote will appear to the right side of the text being
+highlighted, generally beside or very near to the paragraph containing the
+text being emphasized.
 
-Q: How does this Stanza work?
+Q: When was the Opus Primus PullQuote Stanza added to the core theme files?
+Opus Primus PullQuotes was a part of the initial release of the theme.
 
+Q: How does the Opus Primus PullQuote Stanza work?
+The Stanza works by implementing a WordPress shortcode designated as `pullquote`
+with the additional `to` parameter. By default `to` is equal to "right" but can
+be set to "left" to place the PullQuote on the side of the content.
 
 == Notes ==
+* The Opus Primus PullQuotes Stanza, although fully functional, is meant as an
+example of how the Opus Primus theme can be extended via Stanzas.
